# sigmacatch

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE  README.md  build.rs  cliff.toml  deny.toml  mkdocs.yaml
.cargo/: config.toml
.github/: dependabot.yml
.github/workflows/: audit.yml  build.yml  documentation.yml  lint.yml  release.yml  test.yml
crates/detection-engine/: Cargo.toml
crates/detection-engine/pipelines/: flatten_winevt.yml  windows.yml
crates/detection-engine/src/: lib.rs
crates/sigma-core/: Cargo.toml
crates/sigma-core/src/mapping/: mod.rs
crates/sigma-mapping/: Cargo.toml
crates/sigma-mapping/src/mapping/: channel_mapping.rs  channel_mapping.yml
crates/sigma-regression/: Cargo.toml
crates/sigma-regression/src/: generator.rs  lib.rs  loader.rs  triplet.rs
crates/sigmacatch-types/: Cargo.toml
crates/sigmacatch-types/src/: lib.rs
crates/win-evt-core/: Cargo.toml
crates/winevt-xml/: Cargo.toml
crates/winevt-xml/src/: lib.rs  types.rs  xml_parser.rs
docs/: index.md
docs/en/: architecture-reference.md  architecture.md  build.md  nice-to-have.md  output-format.md  regression-data-format.md  tools.md
docs/fr/: architecture-reference.md  architecture.md  build.md  index.md  nice-to-have.md  output-format.md  regression-data-format.md  tools.md
examples/: evtx_inspect.rs
pipelines/: sysmon.yml
sigmacatch/: Cargo.toml  build.rs
sigmacatch/src/: config.rs  lib.rs  logger.rs  main.rs  pipeline.rs  repo.rs
sigmacatch/src/collectors/: event_log.rs  mod.rs
sigmacatch/src/detection/: mod.rs
sigmacatch/src/engine/: mod.rs
sigmacatch/src/evtx/: mod.rs
sigmacatch/src/generators/: mod.rs
sigmacatch/src/github/: commit.rs  mod.rs
sigmacatch/src/parser/: winevt.rs
sigmacatch/src/regression/: generator.rs  info.rs  mod.rs  triplet.rs
sigmacatch/src/sigma/: engine.rs  loader.rs  mod.rs
sigmacatch/src/sigma/mapping/: mod.rs
sigmacatch/tests/fixtures/events/: security_4625.json  security_4688.json
sigmacatch/tests/fixtures/rules/test/: test_category_process_creation.yml  test_security_4688.yml
src/: config.rs  git.rs  logger.rs  main.rs
src/collector/: mod.rs  winevt.rs
src/contrib/: branch.rs  commit.rs  fork.rs  mod.rs
src/evtx/: writer.rs
src/parser/: mod.rs
src/pipelines/: channel_mapping.yml  windows.yml
src/regression/: format.rs  generator.rs  info_yml.rs  mod.rs
src/sigma/: engine.rs  loader.rs  mod.rs
src/sigma/mapping/: channel_mapping.rs  custom.rs  mod.rs  taxonomy.rs
tests/fixtures/events/: sysmon_1.json
tests/fixtures/rules/test/: test_sysmon_1.yml
