# SPDX-License-Identifier: MIT
# SPDX-FileCopyrightText: 2026 sigmacatch contributors

[package]
name = "sigmacatch"
version = "0.1.1"
edition = "2021"
description = "Capture real Windows events and match them against Sigma rules to produce regression data"
license = "MIT"

[[bin]]
name = "sigmacatch"
path = "src/main.rs"

[dependencies]
# Git (100% Rust, no git binary required)
gix = { version = "0.85", default-features = false, features = ["blocking-network-client", "blocking-http-transport-reqwest-rust-tls", "sha1", "worktree-mutation"] }
gix-ref = "0.65"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }

# Sérialisation
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = { package = "yaml_serde", version = "0.10" }

# rsigma
rsigma-eval = "0.18"
rsigma-parser = "0.18"

# Async
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros", "sync", "time", "signal"] }

# Logs
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"

# Utilitaires
anyhow = "1.0"
phf = { version = "0.11", features = ["macros"] }
chrono = "0.4"
uuid = { version = "1", features = ["v4"] }
roxmltree = "0.21"

[profile.release]
strip = true
lto = true
codegen-units = 1

[dev-dependencies]
tempfile = "3.12"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.62", features = [
    "Win32_Foundation",
    "Win32_System_Com",
    "Win32_System_Console",
    "Win32_System_EventLog",
    "Win32_System_Threading",
    "Win32_Security",
] }
