# SPDX-License-Identifier: MIT
# SPDX-FileCopyrightText: 2026 sigmacatch contributors

[workspace]
resolver = "2"
members = [
    "sigmacatch",
    "crates/winevt-xml",
    "crates/sigma-mapping",
    "crates/sigma-regression",
    "crates/detection-engine",
]

[profile.release]
strip = true
lto = true
codegen-units = 1
