# SPDX-License-Identifier: MIT
# SPDX-FileCopyrightText: 2026 sigmacatch contributors

[package]
name = "sigmacatch"
version = "0.2.0"
edition = "2021"
description = "Capture real Windows events and match them against Sigma rules to produce regression data"
license = "MIT"

[[bin]]
name = "sigmacatch"
path = "src/main.rs"

[[bin]]
name = "evtx_check"
path = "src/bin/evtx_check.rs"

[dependencies]
# Crate workspace — detection engine
detection-engine = { path = "../crates/detection-engine" }

# Crate workspace — mapping
sigma-mapping = { path = "../crates/sigma-mapping" }

# Crate workspace — Event Log XML parser
winevt-xml = { path = "../crates/winevt-xml" }

# Crate workspace — shared types
sigmacatch-types = { path = "../crates/sigmacatch-types" }

# Crate workspace — SigmaHQ regression data format
sigma-regression = { path = "../crates/sigma-regression" }

# Git (100% Rust, no git binary required)
grit-lib = "0.5"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "blocking"] }

# Sérialisation
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = { package = "yaml_serde", version = "0.10" }

# rsigma
rsigma-eval = "0.20"
rsigma-parser = "0.20"

# Async
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros", "sync", "time", "signal"] }

# Logs
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"

# Utilitaires
anyhow = "1.0"
phf = { version = "0.14", features = ["macros"] }
chrono = "0.4"
rayon = "1.10"
uuid = { version = "1", features = ["v4"] }

# EVTX parsing (for evtx_check tool)
evtx = "0.12"

[dev-dependencies]
tempfile = "3.12"

[target.'cfg(windows)'.dependencies]
dunce = "1.0"
windows = { version = "0.62", features = [
    "Win32_Foundation",
    "Win32_System_Com",
    "Win32_System_Console",
    "Win32_System_EventLog",
    "Win32_System_Threading",
    "Win32_Security",
] }
