[package]
name = "sigma-mapping"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_yaml = { package = "yaml_serde", version = "0.10" }
phf = { version = "0.11", features = ["macros"] }
rsigma-parser = "0.19"
tracing = "0.1"

[dev-dependencies]
tempfile = "3.12"
