[package]
name = "sigma-regression"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = { package = "yaml_serde", version = "0.10" }
anyhow = "1.0"
chrono = "0.4"
uuid = { version = "1", features = ["v4"] }
tracing = "0.1"

sigmacatch-types = { path = "../sigmacatch-types" }

[dev-dependencies]
tempfile = "3.12"
